--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,11 @@ toml = {version = "^0.10.2", optional = true}
 tox = { version = "^3.26.0", optional = true}
 twine = { version = "^4.0.1", optional = true}
 virtualenv = { version = "^20.16.5", optional = true}
+strawberry-graphql = {extras = ["fastapi"], version = "^0.171.1"}
+fastapi = "^0.95.0"
+uvicorn = {extras = ["standard"], version = "^0.21.1"}
+singleton-decorator = "^1.0.0"
+pydantic = "^1.10.7"
 
 [tool.poetry.extras]
 test = [
