--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,7 @@ fastapi = "^0.95.0"
 uvicorn = {extras = ["standard"], version = "^0.21.1"}
 singleton-decorator = "^1.0.0"
 pydantic = "^1.10.7"
+python-box = "^7.0.1"
 
 [tool.poetry.extras]
 test = [
