--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,12 @@
 [tox]
 isolated_build = true
-envlist = py38, py39, py310, format, lint, build
+envlist = py39, py310, py311, format, lint, build
 
 [gh-actions]
 python =
-    3.10: py310, format, lint, build
+    3.11: py311, format, lint, build
+    3.10: py310
     3.9: py39
-    3.8: py38
 
 [flake8]
 max-line-length = 79
@@ -27,12 +27,14 @@ exclude = .git,
     .pytest_cache,
     .vscode,
     .github,
-    # By default test codes will be linted.
+    # By default test code will be linted.
     # tests
 
 [coverage:run]
 # uncomment the following to omit files during running
 #omit =
+;concurrency = multiprocessing,thread
+
 [coverage:report]
 exclude_lines =
     pragma: no cover
@@ -46,58 +48,59 @@ exclude_lines =
     def main
 
 [testenv]
-allowlist_externals = pytest
-extras =
-    test
+skip_install = true
+allowlist_externals =
+    poetry
 passenv = *
 setenv =
     PYTHONPATH = {toxinidir}
     PYTHONWARNINGS = ignore
+commands_pre =
+    poetry install --with dev,test
 commands =
-    pytest \
-        --cov=softpack \
+    poetry run pytest \
+        --cov=softpack_core \
         --cov-branch \
         --cov-report=xml \
         --cov-report=term-missing \
         tests
 
 [testenv:format]
+skip_install = true
 allowlist_externals =
+    poetry
     autoflake
     isort
     black
-extras =
-    test
 commands =
     autoflake \
         --in-place \
         --recursive \
         --remove-unused-variables \
         --remove-all-unused-imports \
-        softpack
-    isort softpack
-    black softpack tests
+        softpack_core tests
+    isort softpack_core tests
+    black softpack_core tests
 
 [testenv:lint]
-deps =
-    types-setuptools
+skip_install = true
 allowlist_externals =
+    poetry
     flake8
     mypy
-extras =
-    test
 commands =
-    flake8 softpack tests
-    mypy softpack tests
+    flake8 softpack_core
+    flake8 tests --ignore=D101,D102,D103,D107
+    mypy softpack_core
 
 [testenv:build]
+skip_install = true
 allowlist_externals =
     poetry
     mkdocs
     twine
-extras =
-    doc
-    dev
+commands_pre =
+    poetry install --with dev,doc
 commands =
     poetry build
     mkdocs build
