--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -7,6 +7,6 @@ tag = True
 search = version = "{current_version}"
 replace = version = "{new_version}"
 
-[bumpversion:file:softpack/__init__.py]
+[bumpversion:file:softpack_core/__init__.py]
 search = __version__ = '{current_version}'
 replace = __version__ = '{new_version}'
