🔧 chore(app.py): fix HTTP GET handler for / route 🐛 fix(artifacts.py): handle empty list of groups returned by LDAP 🔧 chore(config.yml): add comments to Vault and LDAP configs 🔧 chore(models.py): make LDAP and Vault configs optional 🐛 fix(ldapapi.py): handle AttributeError and ldap.SERVER_DOWN exceptions 🔧 chore(environment.py): set username from the environment if not provided

--- a/softpack_core/config/conf/config.yml
+++ b/softpack_core/config/conf/config.yml
@@ -8,15 +8,18 @@ server:
       - http://localhost:8080
       - http://localhost:3000
 
-vault:
-    url:
-    path:
-    token:
+# LVault Config
+#  vault:
+#      url:
+#      path:
+#      token:
 
-ldap:
-  server:
-  base:
-  filter:
-  group:
-    attr:
-    pattern:
+# LDAP Config
+#  ldap:
+#    server:
+#    retries:
+#    base:
+#    filter:
+#    group:
+#      attr:
+#      pattern:
