🚀 chore(dev.yml): add checkout step for softpack-artifacts repository 🐛 fix(artifacts.py): handle missing credentials in artifacts reader 🔧 refactor(models.py): make artifacts reader and writer credentials optional 🔧 refactor(environment.py): inherit from Spack.PackageBase instead of Spack.Package 🔧 refactor(spack.py): create PackageBase class to avoid circular import and inherit Package from it

--- a/softpack_core/config/conf/config.yml
+++ b/softpack_core/config/conf/config.yml
@@ -8,6 +8,9 @@ server:
       - http://localhost:8080
       - http://localhost:3000
 
+artifacts:
+  path: /tmp/softpack-artifacts
+
 # LVault Config
 #  vault:
 #      url:
