🐛 fix(dev.yml): change path to softpack-artifacts directory 🔧 chore(config.yml): change path to softpack-artifacts directory

--- a/softpack_core/config/conf/config.yml
+++ b/softpack_core/config/conf/config.yml
@@ -9,7 +9,7 @@ server:
       - http://localhost:3000
 
 artifacts:
-  path: /tmp/softpack-artifacts
+  path: ./softpack-artifacts
 
 # LVault Config
 #  vault:
