--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -40,7 +40,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: softpack-io/softpack-artifacts
-          path: /tmp/softpack-artifacts
+          path: softpack-artifacts
 
       - name: Setup python
         uses: actions/setup-python@v4
