🚀 feat(config.yml): add softpack-artifacts repository URL to artifacts section

--- a/softpack_core/config/conf/config.yml
+++ b/softpack_core/config/conf/config.yml
@@ -9,6 +9,7 @@ server:
       - http://localhost:3000
 
 artifacts:
+  repo: https://github.com/softpack-io/softpack-artifacts.git
   path: ./softpack-artifacts
 
 # LVault Config
