:memo: Update documentation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ name = "softpack-core"
 version = "0.1.0"
 homepage = "https://github.com/wtsi-hgi/softpack-core"
 description = "SoftPack Core backend service."
-authors = ["altaf-ali <altaf.ali@sanger.ac.uk>"]
+authors = ["altaf-ali <altaf.ali@sanger.ac.uk>", "SamO135 <so17@sanger.ac.uk", "KMace <km34@sanger.ac.uk"]
 readme = "README.md"
 license =  "MIT"
 classifiers=[
