--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -26,6 +26,10 @@ jobs:
         with:
           python-version: ${{ matrix.python-versions }}
 
+      - name: Install system libraries
+        run: |
+          sudo apt-get install -y libldap2-dev libsasl2-dev libssl-dev python-dev
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
