🐛 fix(artifacts.py): remove unused import and unused code related to Credentials model 🐛 fix(config.yml): add username field to artifacts.repo to fix missing username error 🐛 fix(models.py): remove Credentials model as it is no longer used 🐛 fix(settings.py): remove unused import and unused code related to merging secrets

--- a/softpack_core/config/conf/config.yml
+++ b/softpack_core/config/conf/config.yml
@@ -11,9 +11,10 @@ server:
 artifacts:
   repo:
     url: https://github.com/softpack-io/softpack-artifacts.git
+    username: softpack-core
   path: ./softpack-artifacts
 
-# LVault Config
+# Vault Config
 #  vault:
 #      url:
 #      path:
