--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,7 @@ singleton-decorator = "^1.0.0"
 sqlalchemy = "1.4.45"
 strawberry-graphql = "^0.177.1"
 typer = "^0.9.0"
+pytest-mock = "^3.11.1"
 
 [tool.poetry.group.dev]
 optional = true
