--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,7 @@ sqlalchemy = "1.4.45"
 strawberry-graphql = "^0.177.1"
 typer = "^0.9.0"
 pytest-mock = "^3.11.1"
+pytest-asyncio = "^0.21.1"
 
 [tool.poetry.group.dev]
 optional = true
