--- a/pyproject.toml
+++ b/pyproject.toml
@@ -134,6 +134,7 @@ skip_gitignore = true
 disallow_untyped_calls = true
 disallow_untyped_defs = true
 ignore_missing_imports = true
+plugins = "strawberry.ext.mypy_plugin"
 
 [tool.pytest.ini_options]
 filterwarnings = [
