--- a/tox.ini
+++ b/tox.ini
@@ -63,7 +63,7 @@ commands =
         --cov-branch \
         --cov-report=xml \
         --cov-report=term-missing \
-        tests
+        tests {posargs}
 
 [testenv:format]
 skip_install = true
