--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,7 @@ strawberry-graphql = "^0.177.1"
 typer = "^0.9.0"
 pytest-mock = "^3.11.1"
 pytest-asyncio = "^0.21.1"
+python-multipart = "^0.0.6"
 
 [tool.poetry.group.dev]
 optional = true
