--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,10 @@
 [tox]
 isolated_build = true
-envlist = py39, py310, py311, format, lint, build
+envlist = py311, format, lint, build
 
 [gh-actions]
 python =
     3.11: py311, format, lint, build
-    3.10: py310
-    3.9: py39
 
 [flake8]
 max-line-length = 79
