--- a/softpack_core/config/conf/config.yml
+++ b/softpack_core/config/conf/config.yml
@@ -9,6 +9,10 @@ server:
       - http://localhost:3000
       - http://localhost:5173
 
+builder:
+  host: 0.0.0.0
+  port: 8001
+
 artifacts:
   repo:
     url: https://github.com/mjkw31/softpack-artifacts
