--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -28,6 +28,7 @@ jobs:
 
       - name: Install system libraries
         run: |
+          sudo apt-get update
           sudo apt-get install -y libldap2-dev libsasl2-dev libssl-dev python-dev
 
       - name: Install dependencies
