Use normal flake8 ignores for tests as well

--- a/tox.ini
+++ b/tox.ini
@@ -88,7 +88,7 @@ allowlist_externals =
     mypy
 commands =
     flake8 softpack_core
-    flake8 tests --ignore=D101,D102,D103,D107
+    flake8 tests --ignore=D101,D102,D103,D107,E203,E266,W503
     mypy softpack_core
 
 [testenv:build]
