Send email to the user when a build fails or succeeds.

--- a/softpack_core/config/conf/config.yml
+++ b/softpack_core/config/conf/config.yml
@@ -27,7 +27,12 @@ spack:
 
 recipes:
   toAddr: none@domain.com
-  fromAddr: none@domain.com
+  fromAddr: "{}@domain.com"
+  smtp: some.mail.relay
+
+environments:
+  toAddr: "{}@domain.com"
+  fromAddr: "none@domain.com"
   smtp: some.mail.relay
 
 
